PHASE 3 - checkstyle problem resolved, break down the long method

--- a/src/main/gui/DisplayWindow.form
+++ b/src/main/gui/DisplayWindow.form
@@ -15,7 +15,9 @@
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="3" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-15983822"/>
+        </properties>
         <border type="none"/>
         <children>
           <component id="1a29d" class="javax.swing.JLabel">
@@ -23,7 +25,9 @@
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <background color="-15983822"/>
               <font size="24" style="1"/>
+              <foreground color="-3824019"/>
               <text value="My properties"/>
             </properties>
           </component>
@@ -53,7 +57,10 @@
                 <preferred-size width="150" height="50"/>
               </grid>
             </constraints>
-            <properties/>
+            <properties>
+              <background color="-12894399"/>
+              <foreground color="-1"/>
+            </properties>
           </component>
         </children>
       </grid>
@@ -62,7 +69,9 @@
         <constraints>
           <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-15983822"/>
+        </properties>
         <border type="none"/>
         <children>
           <component id="4774b" class="javax.swing.JLabel">
@@ -70,12 +79,13 @@
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <foreground color="-1"/>
               <text value="Address"/>
             </properties>
           </component>
           <component id="7343c" class="javax.swing.JTextField" binding="textAddress">
             <constraints>
-              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="1" use-parent-layout="false">
+              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
               </grid>
             </constraints>
@@ -86,6 +96,7 @@
               <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <foreground color="-1"/>
               <text value="Price"/>
             </properties>
           </component>
@@ -102,6 +113,7 @@
               <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <foreground color="-1"/>
               <text value="Capacity"/>
             </properties>
           </component>
@@ -118,6 +130,7 @@
               <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <foreground color="-1"/>
               <text value="Property is rented?"/>
             </properties>
           </component>
@@ -134,6 +147,7 @@
               <grid row="8" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <foreground color="-1"/>
               <text value="Rental paid?"/>
             </properties>
           </component>
